# rust-flaskr

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
migrations/2018-11-23-105218_create_posts/: up.sql
migrations/2018-11-23-105235_create_users/: up.sql
src/: .env  content_model.rs  context.rs  main.rs  models.rs  schema.rs
