[package]
name = "rust-flaskr"
version = "0.2.0"
authors = ["Kristoffer Andersson <kode.kristoff@gmail.com>"]

[dependencies]
thruster = "0.5"
futures = "*"
serde = "*"
serde_json = "*"
tokio = "*"
dotenv = "*"
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
lazy_static = "*"
smallvec = "*"
chrono = { version = "*", features = ["serde"] }
